--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Printer - Responsive MultiPurpose HTML5 Template</title>
+<title>Calligrafix - Designer Printer</title>
 <meta name="keywords" content="" />
 <meta name="description" content="">
 <meta name="author" content="">
