--- a/onepage-corporate.html
+++ b/onepage-corporate.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Printer - Responsive MultiPurpose HTML5 Template</title>
+<title>Calligrafix - Designer / Printers / UI / UX / Tech Support </title>
 <meta name="keywords" content="" />
 <meta name="description" content="">
-<meta name="author" content="">
+<meta name="author" content="Aamir Raheel">
 
 <!-- Mobile view -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,6 +64,7 @@
 <!--end loading--> 
 
 <!-- Style Customizer -->
+<!--
 <section id="style-customizer">
   <div class="style-customizer-wrap form-horizontal">
     <h4 class="sc-header">Style Customizer</h4>
@@ -130,6 +131,7 @@
   </div>
   <button id="sc-toggle" title="Styles Customizer"><i class="fa fa-wrench"></i> </button>
 </section>
+-->
 <div class="modal fade" tabindex="-1" role="dialog" id="afterSaveCSSFileModal" aria-labelledby="afterSaveCSSFileModalLabel">
   <div class="modal-dialog">
     <div class="modal-content">
